--- a/viewplan.html
+++ b/viewplan.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta charset="UTF-8"/>
-  <title>Explain Plan</title>
+  <title>Explain Plan Viewer Script</title>
   <script type="text/javascript" src="planviewer.js"></script>
 </head>
 <body>
